--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,7 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.leaflet-container {
+    width: inherit;
+    height: inherit;
+}
